
######################
#                    #
#      2021.7.4      #
#                    #
######################
New features and other changes:
1. Added SQL Server Management Studio (SSMS) config item and bumped config version.
2. Added function Copy-SQLServerManagementStudio (aka Copy-SSMS.)

######################
#                    #
#      2021.7.3      #
#                    #
######################
New features and other changes:
1. Changed InstallRemote.ps1 so toast notifications don't show on servers.
2. Added SplunkUF and VMwareTools config file items and bumped config version.
3. Added functions Copy-SplunkForwarder and Copy-VMwareTools.
4. Changed switches on Visual Studio Code install in InstallRemote.ps1.
5. Changed switches on install command in Install-VisualStudioCode.
6. Commented out McAfee patch installs in InstallRemote.ps1.

######################
#                    #
#      2021.7.2      #
#                    #
######################
New features and other changes:
1. Made notifier parameter in Send-ToastNotification dynamic.
2. Modified Get-NotificationApp so that it shows the actual Display Name that is displayed on Toast notifications.
3. Added a field to the output of Get-NotificationApp that combines the DisplayName and Name outputs.
4. Added AudioSource, RequireDismiss, and ShortDuration parameters to Send-ToastNotification.
5. Changed default AudioSource in Send-ToastNotification to 'ms-winsoundevent:Notification.Looping.Alarm3'.
6. Changed default Notifier in Send-ToastNotification to Windows.SystemToast.NfpAppAcquire which has a display name of System Notification.
7. Added OperatingSystem check to InstallRemote.ps1. If the computer is a server than it will not schedule a reboot.

######################
#                    #
#      2021.7.1      #
#                    #
######################
New features and other changes:
1. Added Send-ToastNotification to InstallRemote.ps1.