@@ -5244,6 +5244,64 @@ Function Install-Patches {
 New-Alias -Name "Install-Updates" -Value Install-Patches
 
 
+Function Install-SQLServerManagementStudio {
+<#
+   .Parameter ComputerName
+    Specifies the computer or computers
+.Notes
+    AUTHOR: Skyler Hart
+    CREATED: 2021-07-24 21:25:32
+    LASTEDIT: 2021-07-24 21:25:32
+    KEYWORDS:
+    REQUIRES:
+        -RunAsAdministrator
+.Link
+    https://wstools.dev
+#>
+    [CmdletBinding()]
+    Param (
+        [Parameter(Mandatory=$false, Position=0, ValueFromPipeline = $true, ValueFromPipelineByPropertyName = $true)]
+        [Alias('Host','Name','Computer','CN')]
+        [string[]]$ComputerName = "$env:COMPUTERNAME"
+    )
+
+    $config = $Global:WSToolsConfig
+    $app = $config.SSMS
+
+    $b = 0
+    $n = $ComputerName.Count
+    foreach ($comp in $ComputerName) {
+        if ($n -gt 1) {
+            $b++
+            $p = ($b / $n)
+            $p1 = $p.ToString("P")
+            Write-Progress -Id 1 -activity "Copying SSMS to computer and then initiating install" -status "Computer $b of $n. Percent complete:  $p1" -PercentComplete (($b / $n)  * 100)
+        }
+
+        try {
+            robocopy $app \\$comp\c$\Patches\SSMS SSMS-Setup*.exe /r:3 /w:15 /njh /njs
+            $install = Invoke-WMIMethod -Class Win32_Process -ComputerName $comp -Name Create -ArgumentList 'cmd /c c:\Patches\SSMS\SSMS-Setup-ENU.exe /Quiet SSMSInstallRoot="C:\Program Files (x86)\Microsoft SQL Server Management Studio 18" DoNotInstallAzureDataStudio=1' -ErrorAction Stop #DevSkim: ignore DS104456
+            $end = Get-Date
+            $info = New-Object -TypeName PSObject -Property @{
+                ComputerName = $comp
+                Status = "Install Initialized"
+                Time = $end
+            }#new object
+        }
+        catch {
+            $end = Get-Date
+            $info = New-Object -TypeName PSObject -Property @{
+                ComputerName = $comp
+                Status = "Unable to install"
+                Time = $end
+            }#new object
+        }
+        $info
+    }
+}
+New-Alias -Name "Install-SSMS" -Value Install-SQLServerManagementStudio
+
+
 Function Install-VisualStudioCode {
 <#
    .Parameter ComputerName
